--- a/_posts/2014-12-16-gala.md
+++ b/_posts/2014-12-16-gala.md
@@ -2,12 +2,17 @@
 layout: post
 title:  "古诗词"
 category: life
-tags: javascirpt
+tags: 生活感悟
 ---
+##《木兰词·拟古决绝词柬友》
+	
+	
+					人生若只如初见，
+					何事秋风悲画扇。
+					等闲变却故人心，
+					却道故人心易变。
 
-《木兰词·拟古决绝词柬友》
-
-
-人生若只如初见，何事秋风悲画扇。等闲变却故人心，却道故人心易变。
-
-骊山语罢清宵半，泪雨零铃终不怨。何如薄幸锦衣郎，比翼连枝当日愿!
+					骊山语罢清宵半，
+					泪雨零铃终不怨。
+					何如薄幸锦衣郎，
+					比翼连枝当日愿!
