--- a/_posts/2015-2-27-redis-2.md
+++ b/_posts/2015-2-27-redis-2.md
@@ -6,9 +6,9 @@ tags: redis
 ---
 
 
-redis 初始化配置文件实例。
+##redis 初始化配置文件实例。
 
-##1、daemonize
+####1、daemonize
 默认redis不是以后台线程跑的，如果需要后台运行，请把参数设为yes，
 注意：当后台运行时，redis 会把pid写到redis.pid 这个文件里。
 daemonize no
