--- a/_posts/2015-2-27-redis-2.md
+++ b/_posts/2015-2-27-redis-2.md
@@ -13,17 +13,17 @@ tags: redis
 注意：当后台运行时，redis 会把pid写到redis.pid 这个文件里。
 daemonize no
 
-##2、pidfile
+####2、pidfile
 当redis 后台运行的时候，会默认写到/var/run/redis.pid 这个文件里
 你可以指定一个自定义的pid文件在这里。
 pidfile /var/run/redis.pid
 
-##3、port
+####3、port
 redis启动后监听的端口，默认是6379，可以指定
 如果设置为0 则，redis不会监听到tcp的socket链接.
 port 6379
 
-##4、bind
+####4、bind
 redis默认绑定的是本机，可以自己定义多个ip进行绑定.
 # bind 192.168.1.100 10.0.0.1
 # bind 127.0.0.1
@@ -31,7 +31,7 @@ redis默认绑定的是本机，可以自己定义多个ip进行绑定.
 当客户端空闲多少秒后会关闭链接。
 timeout 0
 
-##5、loglevel
+####5、loglevel
 指定日志级别
  This can be one of:
 debug (a lot of information, useful for development/testing) 开发测试使用，信息多
@@ -40,29 +40,29 @@ notice (moderately verbose, what you want in production probably)
 warning (only very important / critical messages are logged)
 loglevel notice
 
-##6、logfile
+####6、logfile
 指定日志文件，这里可以指定redis的日志文件
  Specify the log file name. Also the empty string can be used to force
 Redis to log on the standard output. Note that if you use standard
  output for logging but daemonize, logs will be sent to /dev/null
 logfile ""
 
-##7、syslog-enabled
+####7、syslog-enabled
 设置为yes会把日志输出到系统日志，默认是no
 syslog-enabled no
 
-##8、syslog-ident
+####8、syslog-ident
 指定syslog的标示符，如果'syslog-enabled'是no，则这个选项无效。
 syslog-ident redis
 
-##9、syslog-facility 
+####9、syslog-facility 
 指定syslog 设备（facility), 必须是USER或者LOCAL0到LOCAL7.
 syslog-facility local0
 
-##10、databases
+####10、databases
 设置数据库数目。默认的数据库是DB 0。可以通过SELECT <dbid>来选择一个数据库，dbid是[0,'databases'-1]的数字
 databases 16
-##11、save
+####11、save
 
  硬盘上保存数据:
 
@@ -82,18 +82,18 @@ save 900 1
 save 300 10
 save 60 10000
 
-##12、rdbcompression
+####12、rdbcompression
 存储数据时是否压缩数据。默认是yes。
 rdbcompression yes
 
 
 
-##13、dbfilename
+####13、dbfilename
 保存dump数据的文件名
 dbfilename dump.rdb
 
 
-##14、dir
+####14、dir
  数据会被持久化到这个目录下的‘dbfilename’指定的文件中。注意，这里指定的必须是目录而不能是文件。
 dir ./
 
