--- a/_posts/2015-2-27-redis-2.md
+++ b/_posts/2015-2-27-redis-2.md
@@ -25,8 +25,8 @@ port 6379
 
 ####4、bind
 redis默认绑定的是本机，可以自己定义多个ip进行绑定.
-# bind 192.168.1.100 10.0.0.1
-# bind 127.0.0.1
+bind 192.168.1.100 10.0.0.1
+bind 127.0.0.1
 
 当客户端空闲多少秒后会关闭链接。
 timeout 0
