--- a/_posts/2015-3-11-eclipse-1.md
+++ b/_posts/2015-3-11-eclipse-1.md
@@ -4,13 +4,13 @@ title:  "eclipse svn 插件 忽略target、classpath 等"
 category: eclipse
 tags: 忽略target classpath settings等
 ---
-![](https://ywendy.github.io/img/eclipse-svnignore.png)	
-eclipse svn插件里有时候会多出classpath，我们并不需要，需要设置忽略。
+
+##eclipse svn插件里有时候会多出classpath，我们并不需要，需要设置忽略。
 
 
 ##1、项目--》右键--》Team--->设置属性---》svn:ignore 添加属性如下:
 
-####
+##属性值如下：
 .classpath
 .settings
 .settings/*
