--- a/_posts/2015-3-11-redis-3.md
+++ b/_posts/2015-3-11-redis-3.md
@@ -9,10 +9,12 @@ tags: redis 获取最新的N个数据
 ##redis 应用场景1->获取最新的N条数据
 
 ####
-如果项目中有获取最新的文章，或者最新的5000条评论时，可以考虑采用
+1、如果项目中有获取最新的文章，或者最新的5000条评论时，可以考虑采用
 redis中的List 来做,如果你还有别的需求，可以新建一个keylist，用来
 保存你的最新N条记录.
 代码简化如下: 这里只贴出了代码片段.
+2、参考 http://ask.chinaunix.net/question/33
+
 
 ##RedisService.java
 
