--- a/_posts/2015-3-13-java基础-矩阵乘法.md
+++ b/_posts/2015-3-13-java基础-矩阵乘法.md
@@ -16,7 +16,8 @@ tags: java 基础 矩阵 乘法
 
 //A矩阵与B矩阵相乘.
   
-  													
+/***
+<code>  													
   	|-								 -|				|-							 -|
 A= 	|	4		5		3		2  	  |    B= | 1		2		3		0   |						
     |                   |       |                 |
@@ -27,7 +28,7 @@ A= 	|	4		5		3		2  	  |    B= | 1		2		3		0   |
 		|  0	  1		2		1 	|				| 7		8		9		3   |
     |-                 -|       |-               -|
                                 
-    
+ </code>   
 
 ```
 
