--- a/_posts/2015-3-13-java基础-矩阵乘法.md
+++ b/_posts/2015-3-13-java基础-矩阵乘法.md
@@ -20,6 +20,11 @@ tags: java 基础 矩阵 乘法
 ![](https://ywendy.github.io/img/juzhensuanfa.png)	
 
 ##java方法实现随机矩阵，矩阵相乘等工作.
+#### 矩阵相乘想到的实现方式:
+####1、采用多线程的方式来做这个矩阵的乘法
+####2、采用master-worker的方式来做.
+####3、hadoop Map-Reduce.
+
 ```java
 package com.wendy.test.matrix;
 
