--- a/_posts/2014-12-16-gala.md
+++ b/_posts/2014-12-16-gala.md
@@ -4,15 +4,10 @@ title:  "古诗词"
 category: life
 tags: 生活感悟
 ---
-##《木兰词·拟古决绝词柬友》
+##信.海阔天空
 	
-	
-					人生若只如初见，
-					何事秋风悲画扇。
-					等闲变却故人心，
-					却道故人心易变。
-
-					骊山语罢清宵半，
-					泪雨零铃终不怨。
-					何如薄幸锦衣郎，
-					比翼连枝当日愿!
+海阔天空　在勇敢以后
+要拿执着　将命运的锁打破
+冷漠的人
+谢谢你们曾经看轻我
+让我不低头　更精采的活
