--- a/_posts/2015-3-11-eclipse-1.md
+++ b/_posts/2015-3-11-eclipse-1.md
@@ -1,23 +1,26 @@
 ---
 layout: post
-title:  "eclipse svn 插件 忽略target、classpath 等"
+title:  "eclipse svn git 插件 忽略target、classpath 等"
 category: eclipse
 tags: 忽略target classpath settings等
 ---
 
-##eclipse svn插件里有时候会多出classpath，我们并不需要，需要设置忽略。
+## eclipse 忽略版本控制中的一些属性
 
+###操作步骤
 
-##1、项目--》右键--》Team--->设置属性---》svn:ignore 添加属性如下:
-
-##属性值如下：
+```java
+eclipse ---> window ---> Preferences ---> Team --->Ingored Resources 
+--->Add Pattern 
+添加如下属性:
 .classpath
-.settings
-.settings/*
+.project
 target
-.iml
+.svn
+.settings
+```
 
-##如图：
+###效果截图：
 ![](https://ywendy.github.io/img/eclipse-svnignore.png)	
 
 	
