--- a/_posts/2014-12-16-gala.md
+++ b/_posts/2014-12-16-gala.md
@@ -4,10 +4,6 @@ title:  "古诗词"
 category: life
 tags: 生活感悟
 ---
-##信.海阔天空
+
 	
-海阔天空　在勇敢以后
-要拿执着　将命运的锁打破
-冷漠的人
-谢谢你们曾经看轻我
-让我不低头　更精采的活
+A close mouth catches no flies.
