--- a/_posts/2014-12-16-gala.md
+++ b/_posts/2014-12-16-gala.md
@@ -1,9 +1,10 @@
 ---
 layout: post
-title:  "古诗词"
+title:  "英文谚语"
 category: life
 tags: 生活感悟
 ---
 
+## 病从口入，祸从口出。 
 	
 A close mouth catches no flies.
