--- a/_posts/2016-03-18-storm-1.md
+++ b/_posts/2016-03-18-storm-1.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title:  "storm 基本概念"
-category: storm
-tags:  storm 基本概念
+title:  "storm."
+category: storm.
+tags:  storm.
 ---
 
 ##storm基本概念理解
