--- a/_posts/2016-06-01-java-分布式事务-01.md
+++ b/_posts/2016-06-01-java-分布式事务-01.md
@@ -5,10 +5,31 @@ category: 分布式事务
 tags:  分布式事务 2pc 3pc
 ---
 
-# 1、布式特点
+# 1、分布式特点
 
 + 分布性
 	
-	多台计算机在空间上随意分布，并且机器的分布情况也会随时变动.
+		多台计算机在空间上随意分布，并且机器的分布情况也会随时变动.
+
++ 对等性
+
+
++ 并发性
+
+
++ 缺乏全局时钟
+
+
++ 故障总是会发生的
+
+
+# 2、分布式的问题
+
++ 通信异常
+
+
++ 网络分区(脑裂)
+
+
 
 
