二阶段提交

--- a/_posts/2016-06-01-java-分布式事务-01.md
+++ b/_posts/2016-06-01-java-分布式事务-01.md
@@ -7,6 +7,7 @@ tags:  分布式事务 2pc 3pc
 
 # 1、分布式特点
 
+
 + 分布性
 	
 		多台计算机在空间上随意分布，并且机器的分布情况也会随时变动.
@@ -29,6 +30,20 @@ tags:  分布式事务 2pc 3pc
 
 
 + 网络分区(脑裂)
+
+
+# 3、一致性协议
+
+## 3.1 2PC 与 3PC
+
+
+
+### 3.1.1 2PC
+
+		2PC 是 two-phase-commited 的缩写，即两阶段提交.是计算机网络尤其是数据库领域内，为了使
+	基于分布式系统架构下的所有节点进行事务处理过程中保持原子性，一致性而设计的一种算法.绝大部
+	分关系型数据库都是采用二阶段提交协议来完成分布式事务处理的.
+
 
 
 
