--- a/_posts/2016-06-01-java-分布式事务-01.md
+++ b/_posts/2016-06-01-java-分布式事务-01.md
@@ -44,6 +44,72 @@ tags:  分布式事务 2pc 3pc
 	基于分布式系统架构下的所有节点进行事务处理过程中保持原子性，一致性而设计的一种算法.绝大部
 	分关系型数据库都是采用二阶段提交协议来完成分布式事务处理的.
 
++ 协议说明
+
+	两阶段提交是指将事物提交过程分成两个阶段来进行处理,处理流程如下:
+
+
+**阶段一:提交事物请求**
+	
+**1 事物询问**
+
+	协调者向所有参与者发送事物内容,询问参与者是否可以执行事物提交操作,并开始等待参与者响应
+
+**2 执行事物**
+
+		
+	各参与者节点执行事物操作,并将Undo和Redo信息记入事物日志中
+
+**3 各参与者向协调者反馈事物询问的响应**
+
+	如果参与者成功执行了事物操作,那么就反馈给协调者Yes响应,表示事物可执行,如果参与者没有成
+	功执行事物,反馈给协调者No响应,表示事物不可以执行
+
+**阶段二:执行事物提交**
+
+**1 发送提交请求**
+
+	协调者向所有参与者发出commit请求
+
+**2 事物提交**
+
+	参与者接收到commit请求后,会正式执行事物提交操作,完成事物提交之后释放事物执行期间占用的
+	资源
+
+**3 反馈事物提交结果**
+
+	参与者事物提交成功后,向协调者发送ACK消息
+
+**4 完成事物**
+
+	协调者在接收到参与者的ack消息后,完成事物.
+
+<font color="red">**中断事物处理**</font>
+
+	如果任何一个参与者向协调者ack一个No响应,或者在超时之后协调者无法得到参与者的ACK消息,则
+	会中断事物.
+
+**1.发送事物回滚请求**
+
+	协调者向参与者发送rollback请求
+
+**2.事物回滚**
+
+	参与者接收到Rollback请求后,会利用在阶段一中记录的UNDO信息进行事物回滚操作,回滚后释放事物
+	占用的资源
+
+**3.反馈事物回滚结果**
+
+	参与者在事物回滚后向协调者发送ＡＣＫ信息．
+
+**4.中断事物**
+
+	协调者在接收到所有参与者反馈的ACK信息后,中断事物.
+
+<font color="red">**两阶段提交示意图:**</font>
+
+![两阶段提交示意图](https://ywendy.github.io/img/两阶段提交示意图.jpg)
+
 
 
 
