--- a/_posts/2016-06-01-java-分布式事务-01.md
+++ b/_posts/2016-06-01-java-分布式事务-01.md
@@ -111,6 +111,16 @@ tags:  分布式事务 2pc 3pc
 ![两阶段提交示意图](https://ywendy.github.io/img/两阶段提交示意图.jpg)
 
 
+**两阶段提交示意图02**
+
+![](https://ywendy.github.io/img/两阶段提交02.jpg)
+
+
+**中断事物示意图**
+
+![](https://ywendy.github.io/img/两阶段提交-中断事物.jpg)
+
+
 
 
 
