--- a/_posts/2016-06-01-java-分布式事务-01.md
+++ b/_posts/2016-06-01-java-分布式事务-01.md
@@ -14,22 +14,35 @@ tags:  分布式事务 2pc 3pc
 
 + 对等性
 
+		组成分布式系统的所有计算机都是对等的.
+
 
 + 并发性
+
+		分布式系统并发的操作共享的资源
 
 
 + 缺乏全局时钟
 
+		分布式系统通过消息传递信息,很难确定事件的先后顺序,缺乏一个全局的时钟.
+
 
 + 故障总是会发生的
+
+		组成分布式系统的计算机,都有可能发生任何形式的故障.
 
 
 # 2、分布式的问题
 
 + 通信异常
 
+		由于网络延迟,造成消息延迟,或者丢消息的现象
+
 
 + 网络分区(脑裂)
+
+		在分布式系统中由于网络异常,最终导致只有部分节点相互通信,其他节点不能通信或者延时很大,
+		这种情况称为网络分区,也叫脑裂.
 
 
 # 3、一致性协议
@@ -119,6 +132,44 @@ tags:  分布式事务 2pc 3pc
 **中断事物示意图**
 
 ![](https://ywendy.github.io/img/两阶段提交-中断事物.jpg)
+
+
+<font color="red">**两阶段提交优缺点:**</font>
+
+
++ 优点:
+
+		原理简单,实现方便
+
++ 缺点:
+
+		同步阻塞,单点问题,脑裂,太过保守
+
+
+	1.<strong>同步阻塞:</strong>
+
+			两阶段提交出现的最大问题就是同步阻塞,极大的限制了分布式系统的性能在两阶段提交的
+			过程中,所有参与事物提交的过程都处于阻塞状态,也即是说各个参与者在等待其他参与者
+			响应的过程中,无法进行其他的操作.
+
+	2.<strong>单点问题:</strong>
+
+			协调者只有一个,一旦出现问题,整个过程将无法运转
+
+	3.<strong>数据不一致:</strong>
+
+			在阶段二中,协调者向参与者发送commit请求时,只有部分参与者收到了commit请求,另一部
+			分可能因为网络原因,或者协调者自身问题等没有收到commit请求,将会出现数据不一致的
+			问题
+
+	4.<strong>太过保守:</strong>
+
+			在协调者向参与者发送了请求后,如果参与者故障了,协调者只能通过自身的超时机制来判断
+			是否需要中断事物,显得有些保守.
+
+
+
+
 
 
 
