--- a/_posts/2017-03-03-JVM-深入VM内核(一).md
+++ b/_posts/2017-03-03-JVM-深入VM内核(一).md
@@ -9,8 +9,22 @@ tags:  JVM
 
 
 ##JVM运行机制
-+ JVM 启动流程
+####1. JVM 启动流程
+
 ![](https://ywendy.github.io/img/jvm/jvm启动流程.jpg)
+
+####2. JVM基本结构
+
+![](https://ywendy.github.io/img/jvm/jvm基本结构.jpg)
+
++ PC寄存器
+
++ 方法区
+
++ JAVA堆
+
++ JAVA栈
+
 
 
 
