--- a/_posts/2017-03-03-JVM-深入VM内核(一).md
+++ b/_posts/2017-03-03-JVM-深入VM内核(一).md
@@ -18,10 +18,27 @@ tags:  JVM
 ![](https://ywendy.github.io/img/jvm/jvm基本结构.jpg)
 
 + PC寄存器
+    - 每个线程拥有一个PC寄存器
+    - 在线程创建时创建
+    - 指向下一条指令的地址
+    - 执行本地方法时，PC的值为undefined
 
 + 方法区
+    - 保存类的元信息
+        - 类型的常量池
+        -  字段、方法等信息
+        -  方法字节码
+    - 和永久代（Perm）关联
+    - 特例
+        - jdk6 String等常量信息在方法区
+        - jdk7时，移动到了JAVA堆中
 
 + JAVA堆
+    - 应用系统的对象保存在堆中
+    - 所有线程共享JAVA堆
+    - 堆是分代的
+    - GC的工作区间
+    ![](https://ywendy.github.io/img/jvm/GC分代001.jpg)
 
 + JAVA栈
 
