--- a/_posts/2018-02-27-databus(1).md
+++ b/_posts/2018-02-27-databus(1).md
@@ -26,15 +26,14 @@ tags:  databus
 #### 安装gradle
 + 解压 gradle-4.5.1-bin.zip 到一个目录下
 + 配置环境变量
-```text
+```
 
-GRADLE_HOME = E:\dev-tools\gradle-4.5.1
-Path = %GRADLE_HOME%\bin
-打开命令行工具：gradle -v 
+    1.GRADLE_HOME = E:\dev-tools\gradle-4.5.1
+    2.Path = %GRADLE_HOME%\bin
+    3.打开命令行工具：gradle -v 
 
 ```
-![](https://ywendy.github.io/img/gradle/gradle-0.png)
-![](https://ywendy.github.io/img/gradle/gradle-1.png)
+
 ![](https://ywendy.github.io/img/gradle/gradle-2.png)
 
 
