--- a/_posts/2018-02-27-databus(1).md
+++ b/_posts/2018-02-27-databus(1).md
@@ -37,7 +37,44 @@ tags:  databus
 ![](https://ywendy.github.io/img/gradle/gradle-2.png)
 
 
+### 下载databus代码
 
+#### clone 一份代码到本地 
+ git clone https://github.com/linkedin/databus.git 
+#### 使用idea打开源代码
+ + 在databus 主目录下的build.gradle 添加如下代码
+```groovy
+    tasks.withType(JavaCompile) {
+        options.encoding = "UTF-8"
+    }
+    
+    tasks.withType(GroovyCompile) {
+        groovyOptions.encoding = "MacRoman"
+    }
+    
+```
++ databus主目录subprojects.gradle 177行修改为
+```groovy
+    if (JavaVersion.current().isJava8Compatible()) {
+      allprojects {
+        tasks.withType(Javadoc) {
+          options.addStringOption('Xdoclint:none', '-quiet')
+          options.encoding("UTF-8")
+          options.charSet("UTF-8")
+        }
+      }
+    }
+```
++ 在databus主目录下执行编译 
+```groovy
+   gradle -Dopen_source=true assemble 
+```
+![](https://ywendy.github.io/img/databus/databus-01.png)
+
+
+
+
+ 
 
 
 
