--- a/_posts/2018-02-27-databus(1).md
+++ b/_posts/2018-02-27-databus(1).md
@@ -41,9 +41,12 @@ tags:  databus
 
 #### clone 一份代码到本地 
  git clone https://github.com/linkedin/databus.git 
+ 
 #### 使用idea打开源代码
  + 在databus 主目录下的build.gradle 添加如下代码
+ 
 ```groovy
+
     tasks.withType(JavaCompile) {
         options.encoding = "UTF-8"
     }
@@ -54,7 +57,9 @@ tags:  databus
     
 ```
 + databus主目录subprojects.gradle 177行修改为
+
 ```groovy
+
     if (JavaVersion.current().isJava8Compatible()) {
       allprojects {
         tasks.withType(Javadoc) {
@@ -64,7 +69,16 @@ tags:  databus
         }
       }
     }
+    
 ```
++ 下载ojdbc6.jar
+```
+    copy ojdbc6.jar 到sandbox-repo/com/oracle/ojdbc6/11.2.0.2.0 下
+    重命名ojdbc6.jar为ojdbc6-11.2.0.2.0.jar
+
+```
+ 
+
 + 在databus主目录下执行编译 
 ```groovy
    gradle -Dopen_source=true assemble 
@@ -72,7 +86,68 @@ tags:  databus
 ![](https://ywendy.github.io/img/databus/databus-01.png)
 
 
+#### 运行databus的mysql demo
+##### mysql5.7+ 安装一份 开启binlog 且 格式为ROW
++ 在数据库中创建表person，并插入数据
+```sql
+    CREATE TABLE IF NOT EXISTS person
+    (
+            id bigint primary key PRIMARY KEY AUTO_INCREMENT,
+            first_name varchar(120) not null,
+            last_name varchar(120) not null,
+            birth_date date,
+            deleted varchar(5) default 'false' not null
+    );
+    INSERT INTO person(first_name, last_name, birth_date)
+           VALUES('balaji', 'varadaran', '1980-01-01');
+    INSERT INTO person(first_name, last_name, birth_date)
+           VALUES('boris', 'shkolnik', '1981-02-02'),
+                 ('sunil', 'nagaraj', '1982-03-03');
+    INSERT INTO person(first_name, last_name, birth_date)
+           VALUES('chavdar', 'botev', '1983-04-04'),
+                 ('phanindra', 'ganti', '1984-05-05'),
+                 ('sajid', 'topiwala', '1985-06-06'),
+                 ('naveen', 'somasundaram', '1984-05-05');
+    INSERT INTO person(first_name, last_name, birth_date)
+           VALUES('greg', 'roelofs', '1985-06-06'),
+                 ('kapil', 'surlaker', '1986-07-07');
+    
+    
+    
+```
+##### 准备linux系统，虚拟机,并安装jdk8
+##### 编译打包文件
+###### relay
++ 修改 databus2-example-relay-pkg/sources-or-person.json
+```json
 
+    {
+        "name" : "person",
+        "id"  : 1234,
+        "uri" : "mysql://root%2Froot@192.168.22.101:3306/1234/mysql-bin",
+        "slowSourceQueryThreshold" : 2000,
+        "sources" :
+        [
+            {
+            "id" : 40,
+            "name" : "com.linkedin.events.example.or_test.Person",
+            "uri": "or_test.person",
+            "partitionFunction" : "constant:1"
+             }
+        ]
+    }
+
+```
+```
+    id 修改为mysql的serverid,sources 中的name 修改为com.linkedin.events.example.or_test.Person
+    这个对应databus2-example-relay-pkg/schemas_registry/com.linkedin.events.example.or_test.Person.1.avsc
+
+```
+
+###### client
++ 修改 PersonClientMain
+
+![](https://ywendy.github.io/img/databus/databus-02.png)
 
  
 
