--- a/_posts/2018-02-27-databus(1).md
+++ b/_posts/2018-02-27-databus(1).md
@@ -89,6 +89,7 @@ tags:  databus
 #### 运行databus的mysql demo
 ##### mysql5.7+ 安装一份 开启binlog 且 格式为ROW
 + 在数据库中创建表person，并插入数据
+
 ```sql
     CREATE TABLE IF NOT EXISTS person
     (
@@ -119,6 +120,7 @@ tags:  databus
 ##### 编译打包文件
 ###### relay
 + 修改 databus2-example-relay-pkg/sources-or-person.json
+
 ```json
 
     {
@@ -138,6 +140,7 @@ tags:  databus
     }
 
 ```
+
 ```
     id 修改为mysql的serverid,sources 中的name 修改为com.linkedin.events.example.or_test.Person
     这个对应databus2-example-relay-pkg/schemas_registry/com.linkedin.events.example.or_test.Person.1.avsc
@@ -149,6 +152,37 @@ tags:  databus
 
 ![](https://ywendy.github.io/img/databus/databus-02.png)
 
+
+###### open replicator
+
+```
+
+    由于新版本的mysql binlog 格式变化了，所以我们需要使用新包open-replicator 1.6
+    修改subprojects.gradle 文件
+   
+
+```
+
+![](https://ywendy.github.io/img/databus/databus-03.png)
+
+
+###### 开始编译打包
+
+```
+    databus/build 目录下
+    1、databus2-example-relay-pkg/distributions/databus2-example-relay-pkg-2.0.0.tar.gz
+    2、databus2-example-client-pkg/distributions/databus2-example-client-pkg-2.0.0.tar.gz
+    copy 以上两个包到linux服务器上
+    解压后首先运行reply ./bin/start-example-relay.sh or_person -Y ./conf/sources-or-person.json
+    在运行./start-example-client.sh person
+    观察client的日志目录 client.log ,tail -f client.log
+    修改表person中的数据 update person set first_name='Boy' where id=1;
+    
+
+
+```
+
+![](https://ywendy.github.io/img/databus/databus-04.png)
  
 
 
