--- a/_posts/2018-02-27-databus(1).md
+++ b/_posts/2018-02-27-databus(1).md
@@ -189,10 +189,17 @@ tags:  databus
     在运行./start-example-client.sh person
     观察client的日志目录 client.log ,tail -f client.log
     修改表person中的数据 update person set first_name='Boy' where id=1;
-    
-
 
 ```
+
+***<font color="red">注意:</font>*** 由于是在windows编译的，shell脚本运行时可能报错，需要到bin目录下执行
+ 
+```bash
+     sed -i 's/\r$//' *
+
+```
+
+
 
 ![](https://ywendy.github.io/img/databus/databus-04.png)
  
