--- a/_posts/2018-02-27-databus(1).md
+++ b/_posts/2018-02-27-databus(1).md
@@ -161,6 +161,10 @@ tags:  databus
 
 ```
 
+***uri:*** 含义<br/>
+mysql://username/password@mysql_host[:mysql_port]/mysql_serverid/binlog_prefix
+
+
 ###### client
 + 修改 PersonClientMain
 
